@@ -1939,6 +1939,11 @@ condition|)
 block|{
 break|break;
 block|}
+name|int
+name|numDocs
+init|=
+literal|0
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -1959,7 +1964,9 @@ name|i
 operator|++
 control|)
 block|{
-assert|assert
+name|int
+name|maxDoc
+init|=
 name|merge
 operator|.
 name|segments
@@ -1973,15 +1980,39 @@ name|info
 operator|.
 name|maxDoc
 argument_list|()
+decl_stmt|;
+name|numDocs
+operator|+=
+name|maxDoc
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|maxDoc
 operator|<
 literal|20
-assert|;
+argument_list|)
+expr_stmt|;
 block|}
 name|writer
 operator|.
 name|merge
 argument_list|(
 name|merge
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|numDocs
+argument_list|,
+name|merge
+operator|.
+name|getMergeInfo
+argument_list|()
+operator|.
+name|info
+operator|.
+name|maxDoc
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
